# cython-sample

./: LICENSE  MANIFEST.in  README.md  devel-requirements.txt  pyproject.toml  setup.cfg  setup.py
src/sample/: __init__.py  bar.pxd  bar.pyi  bar.pyx  bootstrap.pyx  foo.pxd  foo.pyi  foo.pyx  foo_sub.c  foo_sub.h
tests/: test_sample.py
