[metadata]
name = sample
version = 0.0.1
url = https://github.com/meinohama/cython-sample
author = meinohama
author_email = 98445414+meinohama@users.noreply.github.com

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
sample = *.pyi, *.pxd

[options.entry_points]
console_scripts =
    hello = sample:main
